# Lunar-Eclipse-Align-Tool

./: .gitignore  LICENSE  Lunar_Eclipse_Align_ToolV110.py  Lunar_Eclipse_Align_ToolV111.py  Lunar_Eclipse_Align_ToolV113.py  README.md  algorithms_circle.py  algorithms_refine.py  build.py  environment.yml  main.py  pipeline.py  pyproject.toml  requirements.txt  test_rect_fix.py  ui.py  ui_windows.py  utils_common.py
.github/workflows/: build.yml
lunar_eclipse_align/: __init__.py  circle_detection.py  image.py  logging_setup.py  main.py  main_window.py  pipeline.py  shift_detection.py  ui_windows.py  utils.py
lunar_eclipse_align/core/: circle_detection.py  image.py  pipeline.py  shift_detection.py  utils.py
lunar_eclipse_align/ui/: debug_window.py  main_window.py  preview_window.py  select_rect.py  windows.py
lunar_eclipse_align/utils/: constants.py  data_types.py  debugging.py  image.py  logging.py  logging_setup.py  tools.py
src/: algorithms_circle.py  algorithms_circle.py.backup  algorithms_refine.py  circle_detection.py  image.py  main.py  pipeline.py  pipeline.py.backup  shift_detection.py  ui.py  ui_windows.py  utils.py  version.py
tests/: __init__.py  conftest.py  utils.py
tests/core/: test_cases.py  test_circle_detection.py
tests/core/test_data/: hough_params.yaml  images.yaml
tests/data/: hough_params.yaml  images.yaml
tests/test_core/: test_align.py  test_circle_detection.py  test_concrete_detection.py
tests/test_ui/: __init__.py  test_select_rect.py
tests/ui/: test_select_rect.py
tests/utils/: test_image_io.py
